[package]
name = "js-control-flow-analyzer"
version = "0.1.0"
authors = ["Yusuke Tanaka <yusuktan@maguro.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_atoms = "0.2.5"
swc_common = "0.10.6"
swc_ecmascript = { version = "0.14.4", features = ["parser", "transforms", "utils", "visit"] }
